parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> VARIABLES METODOS PRINCIPAL
Rule 2     VARIABLES -> AUXV
Rule 3     VARIABLES -> <empty>
Rule 4     AUXV -> TIPO AUX2 PUNTOCOMA AUXV
Rule 5     AUXV -> TIPO ID VECTOR PUNTOCOMA AUXV
Rule 6     AUXV -> TIPO AUX2 PUNTOCOMA
Rule 7     AUXV -> TIPO ID VECTOR PUNTOCOMA
Rule 8     VECTOR -> LCOR CONSTANTE RCOR
Rule 9     VECTOR -> LCOR CONSTANTE RCOR LCOR CONSTANTE RCOR
Rule 10    AUX2 -> ID COMA AUX2
Rule 11    AUX2 -> ID
Rule 12    SPE -> ASSIGNMENT
Rule 13    SPE -> CALLFUNCTION
Rule 14    SPE -> IFCALL
Rule 15    SPE -> WHILECALL
Rule 16    SPE -> DOWHILECALL
Rule 17    SPE -> FORCALL
Rule 18    SPE -> WRITECALL
Rule 19    SPE -> READCALL
Rule 20    IFCALL -> IF E AUXIF1 DOSPUNTOS B IFAUX AUXF3 END PUNTOCOMA
Rule 21    IFAUX -> ELSE AUXF2 DOSPUNTOS B END PUNTOCOMA
Rule 22    IFAUX -> <empty>
Rule 23    AUXF3 -> <empty>
Rule 24    AUXF2 -> <empty>
Rule 25    AUXIF1 -> <empty>
Rule 26    WHILECALL -> WHILE WHILEAUX E WHILEAUX1 DOSPUNTOS B WHILEAUX2 END PUNTOCOMA
Rule 27    WHILEAUX1 -> <empty>
Rule 28    WHILEAUX -> <empty>
Rule 29    WHILEAUX2 -> <empty>
Rule 30    DOWHILECALL -> DO DOSPUNTOS DOAUX B LOOP E DOAUX1 END PUNTOCOMA
Rule 31    DOAUX -> <empty>
Rule 32    DOAUX1 -> <empty>
Rule 33    FORCALL -> FOR IDAUX IGUAL YONE IFOR PUNTOCOMA FDIR E FSAL PUNTOCOMA INCREMENTO DOSPUNTOS B FAUX END PUNTOCOMA
Rule 34    FAUX -> <empty>
Rule 35    INCREMENTO -> ID PLUSPLUS
Rule 36    FSAL -> <empty>
Rule 37    IDAUX -> ID
Rule 38    IFOR -> <empty>
Rule 39    FDIR -> <empty>
Rule 40    WRITECALL -> WRITE LPAREN AUXESCRIBE RPAREN PUNTOCOMA
Rule 41    AUXESCRIBE -> E
Rule 42    AUXESCRIBE -> STRING
Rule 43    READCALL -> ID IGUAL READ LPAREN RPAREN PUNTOCOMA
Rule 44    CALLFUNCTION -> ID LPAREN RPAREN PUNTOCOMA
Rule 45    ASSIGNMENT -> ASIGANCION
Rule 46    ASSIGNMENT -> ASIGPLUS
Rule 47    ASSIGNMENT -> ASIGMIN
Rule 48    ASSIGNMENT -> ASIGVE
Rule 49    ASIGVE -> DIMENSION IGUAL E PUNTOCOMA
Rule 50    ASIGANCION -> ID IGUAL E PUNTOCOMA
Rule 51    ASIGPLUS -> ID PLUSPLUS PUNTOCOMA
Rule 52    ASIGMIN -> ID MINMIN PUNTOCOMA
Rule 53    E -> E PLUS term
Rule 54    E -> E MINUS term
Rule 55    E -> E OR term
Rule 56    E -> term
Rule 57    term -> term MULT factor
Rule 58    term -> term DIVIDE factor
Rule 59    term -> term MOD factor
Rule 60    term -> term AND factor
Rule 61    term -> factor
Rule 62    factor -> YONE
Rule 63    factor -> LPAREN E RPAREN
Rule 64    factor -> YONE MAYOR YONE
Rule 65    factor -> YONE MENOR YONE
Rule 66    factor -> YONE MAYORIGUAL YONE
Rule 67    factor -> YONE MENORIGUAL YONE
Rule 68    factor -> YONE EQUAL YONE
Rule 69    factor -> YONE NOTEQUAL YONE
Rule 70    YONE -> DIMENSION
Rule 71    YONE -> CONDOUBLE
Rule 72    YONE -> ID
Rule 73    YONE -> CONSTANTE
Rule 74    DIMENSION -> ID LCOR LOCAL RCOR LCOR LOCAL RCOR
Rule 75    DIMENSION -> ID LCOR LOCAL RCOR
Rule 76    LOCAL -> ID
Rule 77    LOCAL -> CONSTANTE
Rule 78    PRINCIPAL -> MAIN LPAREN RPAREN DOSPUNTOS MAINAUX B ENDF FINMAIN
Rule 79    MAINAUX -> <empty>
Rule 80    FINMAIN -> PUNTOCOMA
Rule 81    B -> SPE B
Rule 82    B -> SPE
Rule 83    METODOS -> MEA
Rule 84    METODOS -> <empty>
Rule 85    MEA -> VOID MEAIN LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA MEA
Rule 86    MEA -> VOID MEAIN LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA
Rule 87    MEAIN -> ID
Rule 88    FINMEA -> <empty>
Rule 89    TIPO -> INT
Rule 90    TIPO -> DOUBLE
Rule 91    TIPO -> BOOL

Terminals, with rules where they appear

AND                  : 60
BOOL                 : 91
COMA                 : 10
CONDOUBLE            : 71
CONSTANTE            : 8 9 9 73 77
DIVIDE               : 58
DO                   : 30
DOSPUNTOS            : 20 21 26 30 33 78 85 86
DOUBLE               : 90
ELSE                 : 21
END                  : 20 21 26 30 33
ENDF                 : 78 85 86
EQUAL                : 68
FOR                  : 33
ID                   : 5 7 10 11 35 37 43 44 50 51 52 72 74 75 76 87
IF                   : 20
IGUAL                : 33 43 49 50
INT                  : 89
LCOR                 : 8 9 9 74 74 75
LOOP                 : 30
LPAREN               : 40 43 44 63 78 85 86
MAIN                 : 78
MAYOR                : 64
MAYORIGUAL           : 66
MENOR                : 65
MENORIGUAL           : 67
MINMIN               : 52
MINUS                : 54
MOD                  : 59
MULT                 : 57
NOTEQUAL             : 69
OR                   : 55
PLUS                 : 53
PLUSPLUS             : 35 51
PUNTOCOMA            : 4 5 6 7 20 21 26 30 33 33 33 40 43 44 49 50 51 52 80 85 86
RCOR                 : 8 9 9 74 74 75
READ                 : 43
RPAREN               : 40 43 44 63 78 85 86
STRING               : 42
VOID                 : 85 86
WHILE                : 26
WRITE                : 40
error                : 

Nonterminals, with rules where they appear

ASIGANCION           : 45
ASIGMIN              : 47
ASIGPLUS             : 46
ASIGVE               : 48
ASSIGNMENT           : 12
AUX2                 : 4 6 10
AUXESCRIBE           : 40
AUXF2                : 21
AUXF3                : 20
AUXIF1               : 20
AUXV                 : 2 4 5
B                    : 20 21 26 30 33 78 81 85 86
CALLFUNCTION         : 13
DIMENSION            : 49 70
DOAUX                : 30
DOAUX1               : 30
DOWHILECALL          : 16
E                    : 20 26 30 33 41 49 50 53 54 55 63
FAUX                 : 33
FDIR                 : 33
FINMAIN              : 78
FINMEA               : 85 86
FORCALL              : 17
FSAL                 : 33
IDAUX                : 33
IFAUX                : 20
IFCALL               : 14
IFOR                 : 33
INCREMENTO           : 33
LOCAL                : 74 74 75
MAINAUX              : 78
MEA                  : 83 85
MEAIN                : 85 86
METODOS              : 1
PRINCIPAL            : 1
READCALL             : 19
S                    : 0
SPE                  : 81 82
TIPO                 : 4 5 6 7
VARIABLES            : 1
VECTOR               : 5 7
WHILEAUX             : 26
WHILEAUX1            : 26
WHILEAUX2            : 26
WHILECALL            : 15
WRITECALL            : 18
YONE                 : 33 62 64 64 65 65 66 66 67 67 68 68 69 69
factor               : 57 58 59 60 61
term                 : 53 54 55 56 57 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . VARIABLES METODOS PRINCIPAL
    (2) VARIABLES -> . AUXV
    (3) VARIABLES -> .
    (4) AUXV -> . TIPO AUX2 PUNTOCOMA AUXV
    (5) AUXV -> . TIPO ID VECTOR PUNTOCOMA AUXV
    (6) AUXV -> . TIPO AUX2 PUNTOCOMA
    (7) AUXV -> . TIPO ID VECTOR PUNTOCOMA
    (89) TIPO -> . INT
    (90) TIPO -> . DOUBLE
    (91) TIPO -> . BOOL

    VOID            reduce using rule 3 (VARIABLES -> .)
    MAIN            reduce using rule 3 (VARIABLES -> .)
    INT             shift and go to state 5
    DOUBLE          shift and go to state 6
    BOOL            shift and go to state 7

    S                              shift and go to state 1
    VARIABLES                      shift and go to state 2
    AUXV                           shift and go to state 3
    TIPO                           shift and go to state 4

state 1

    (0) S' -> S .



state 2

    (1) S -> VARIABLES . METODOS PRINCIPAL
    (83) METODOS -> . MEA
    (84) METODOS -> .
    (85) MEA -> . VOID MEAIN LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA MEA
    (86) MEA -> . VOID MEAIN LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA

    MAIN            reduce using rule 84 (METODOS -> .)
    VOID            shift and go to state 10

    METODOS                        shift and go to state 8
    MEA                            shift and go to state 9

state 3

    (2) VARIABLES -> AUXV .

    VOID            reduce using rule 2 (VARIABLES -> AUXV .)
    MAIN            reduce using rule 2 (VARIABLES -> AUXV .)


state 4

    (4) AUXV -> TIPO . AUX2 PUNTOCOMA AUXV
    (5) AUXV -> TIPO . ID VECTOR PUNTOCOMA AUXV
    (6) AUXV -> TIPO . AUX2 PUNTOCOMA
    (7) AUXV -> TIPO . ID VECTOR PUNTOCOMA
    (10) AUX2 -> . ID COMA AUX2
    (11) AUX2 -> . ID

    ID              shift and go to state 12

    AUX2                           shift and go to state 11

state 5

    (89) TIPO -> INT .

    ID              reduce using rule 89 (TIPO -> INT .)


state 6

    (90) TIPO -> DOUBLE .

    ID              reduce using rule 90 (TIPO -> DOUBLE .)


state 7

    (91) TIPO -> BOOL .

    ID              reduce using rule 91 (TIPO -> BOOL .)


state 8

    (1) S -> VARIABLES METODOS . PRINCIPAL
    (78) PRINCIPAL -> . MAIN LPAREN RPAREN DOSPUNTOS MAINAUX B ENDF FINMAIN

    MAIN            shift and go to state 14

    PRINCIPAL                      shift and go to state 13

state 9

    (83) METODOS -> MEA .

    MAIN            reduce using rule 83 (METODOS -> MEA .)


state 10

    (85) MEA -> VOID . MEAIN LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA MEA
    (86) MEA -> VOID . MEAIN LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA
    (87) MEAIN -> . ID

    ID              shift and go to state 16

    MEAIN                          shift and go to state 15

state 11

    (4) AUXV -> TIPO AUX2 . PUNTOCOMA AUXV
    (6) AUXV -> TIPO AUX2 . PUNTOCOMA

    PUNTOCOMA       shift and go to state 17


state 12

    (5) AUXV -> TIPO ID . VECTOR PUNTOCOMA AUXV
    (7) AUXV -> TIPO ID . VECTOR PUNTOCOMA
    (10) AUX2 -> ID . COMA AUX2
    (11) AUX2 -> ID .
    (8) VECTOR -> . LCOR CONSTANTE RCOR
    (9) VECTOR -> . LCOR CONSTANTE RCOR LCOR CONSTANTE RCOR

    COMA            shift and go to state 19
    PUNTOCOMA       reduce using rule 11 (AUX2 -> ID .)
    LCOR            shift and go to state 20

    VECTOR                         shift and go to state 18

state 13

    (1) S -> VARIABLES METODOS PRINCIPAL .

    $end            reduce using rule 1 (S -> VARIABLES METODOS PRINCIPAL .)


state 14

    (78) PRINCIPAL -> MAIN . LPAREN RPAREN DOSPUNTOS MAINAUX B ENDF FINMAIN

    LPAREN          shift and go to state 21


state 15

    (85) MEA -> VOID MEAIN . LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA MEA
    (86) MEA -> VOID MEAIN . LPAREN RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA

    LPAREN          shift and go to state 22


state 16

    (87) MEAIN -> ID .

    LPAREN          reduce using rule 87 (MEAIN -> ID .)


state 17

    (4) AUXV -> TIPO AUX2 PUNTOCOMA . AUXV
    (6) AUXV -> TIPO AUX2 PUNTOCOMA .
    (4) AUXV -> . TIPO AUX2 PUNTOCOMA AUXV
    (5) AUXV -> . TIPO ID VECTOR PUNTOCOMA AUXV
    (6) AUXV -> . TIPO AUX2 PUNTOCOMA
    (7) AUXV -> . TIPO ID VECTOR PUNTOCOMA
    (89) TIPO -> . INT
    (90) TIPO -> . DOUBLE
    (91) TIPO -> . BOOL

    VOID            reduce using rule 6 (AUXV -> TIPO AUX2 PUNTOCOMA .)
    MAIN            reduce using rule 6 (AUXV -> TIPO AUX2 PUNTOCOMA .)
    INT             shift and go to state 5
    DOUBLE          shift and go to state 6
    BOOL            shift and go to state 7

    TIPO                           shift and go to state 4
    AUXV                           shift and go to state 23

state 18

    (5) AUXV -> TIPO ID VECTOR . PUNTOCOMA AUXV
    (7) AUXV -> TIPO ID VECTOR . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24


state 19

    (10) AUX2 -> ID COMA . AUX2
    (10) AUX2 -> . ID COMA AUX2
    (11) AUX2 -> . ID

    ID              shift and go to state 25

    AUX2                           shift and go to state 26

state 20

    (8) VECTOR -> LCOR . CONSTANTE RCOR
    (9) VECTOR -> LCOR . CONSTANTE RCOR LCOR CONSTANTE RCOR

    CONSTANTE       shift and go to state 27


state 21

    (78) PRINCIPAL -> MAIN LPAREN . RPAREN DOSPUNTOS MAINAUX B ENDF FINMAIN

    RPAREN          shift and go to state 28


state 22

    (85) MEA -> VOID MEAIN LPAREN . RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA MEA
    (86) MEA -> VOID MEAIN LPAREN . RPAREN DOSPUNTOS B ENDF PUNTOCOMA FINMEA

    RPAREN          shift and go to state 29


state 23

    (4) AUXV -> TIPO AUX2 PUNTOCOMA AUXV .

    VOID            reduce using rule 4 (AUXV -> TIPO AUX2 PUNTOCOMA AUXV .)
    MAIN            reduce using rule 4 (AUXV -> TIPO AUX2 PUNTOCOMA AUXV .)


state 24

    (5) AUXV -> TIPO ID VECTOR PUNTOCOMA . AUXV
    (7) AUXV -> TIPO ID VECTOR PUNTOCOMA .
    (4) AUXV -> . TIPO AUX2 PUNTOCOMA AUXV
    (5) AUXV -> . TIPO ID VECTOR PUNTOCOMA AUXV
    (6) AUXV -> . TIPO AUX2 PUNTOCOMA
    (7) AUXV -> . TIPO ID VECTOR PUNTOCOMA
    (89) TIPO -> . INT
    (90) TIPO -> . DOUBLE
    (91) TIPO -> . BOOL

    VOID            reduce using rule 7 (AUXV -> TIPO ID VECTOR PUNTOCOMA .)
    MAIN            reduce using rule 7 (AUXV -> TIPO ID VECTOR PUNTOCOMA .)
    INT             shift and go to state 5
    DOUBLE          shift and go to state 6
    BOOL            shift and go to state 7

    TIPO                           shift and go to state 4
    AUXV                           shift and go to state 30

state 25

    (10) AUX2 -> ID . COMA AUX2
    (11) AUX2 -> ID .

    COMA            shift and go to state 19
    PUNTOCOMA       reduce using rule 11 (AUX2 -> ID .)


state 26

    (10) AUX2 -> ID COMA AUX2 .

    PUNTOCOMA       reduce using rule 10 (AUX2 -> ID COMA AUX2 .)


state 27

    (8) VECTOR -> LCOR CONSTANTE . RCOR
    (9) VECTOR -> LCOR CONSTANTE . RCOR LCOR CONSTANTE RCOR

    RCOR            shift and go to state 31


state 28

    (78) PRINCIPAL -> MAIN LPAREN RPAREN . DOSPUNTOS MAINAUX B ENDF FINMAIN

    DOSPUNTOS       shift and go to state 32


state 29

    (85) MEA -> VOID MEAIN LPAREN RPAREN . DOSPUNTOS B ENDF PUNTOCOMA FINMEA MEA
    (86) MEA -> VOID MEAIN LPAREN RPAREN . DOSPUNTOS B ENDF PUNTOCOMA FINMEA

    DOSPUNTOS       shift and go to state 33


state 30

    (5) AUXV -> TIPO ID VECTOR PUNTOCOMA AUXV .

    VOID            reduce using rule 5 (AUXV -> TIPO ID VECTOR PUNTOCOMA AUXV .)
    MAIN            reduce using rule 5 (AUXV -> TIPO ID VECTOR PUNTOCOMA AUXV .)


state 31

    (8) VECTOR -> LCOR CONSTANTE RCOR .
    (9) VECTOR -> LCOR CONSTANTE RCOR . LCOR CONSTANTE RCOR

    PUNTOCOMA       reduce using rule 8 (VECTOR -> LCOR CONSTANTE RCOR .)
    LCOR            shift and go to state 34


state 32

    (78) PRINCIPAL -> MAIN LPAREN RPAREN DOSPUNTOS . MAINAUX B ENDF FINMAIN
    (79) MAINAUX -> .

    ID              reduce using rule 79 (MAINAUX -> .)
    IF              reduce using rule 79 (MAINAUX -> .)
    WHILE           reduce using rule 79 (MAINAUX -> .)
    DO              reduce using rule 79 (MAINAUX -> .)
    FOR             reduce using rule 79 (MAINAUX -> .)
    WRITE           reduce using rule 79 (MAINAUX -> .)

    MAINAUX                        shift and go to state 35

state 33

    (85) MEA -> VOID MEAIN LPAREN RPAREN DOSPUNTOS . B ENDF PUNTOCOMA FINMEA MEA
    (86) MEA -> VOID MEAIN LPAREN RPAREN DOSPUNTOS . B ENDF PUNTOCOMA FINMEA
    (81) B -> . SPE B
    (82) B -> . SPE
    (12) SPE -> . ASSIGNMENT
    (13) SPE -> . CALLFUNCTION
    (14) SPE -> . IFCALL
    (15) SPE -> . WHILECALL
    (16) SPE -> . DOWHILECALL
    (17) SPE -> . FORCALL
    (18) SPE -> . WRITECALL
    (19) SPE -> . READCALL
    (45) ASSIGNMENT -> . ASIGANCION
    (46) ASSIGNMENT -> . ASIGPLUS
    (47) ASSIGNMENT -> . ASIGMIN
    (48) ASSIGNMENT -> . ASIGVE
    (44) CALLFUNCTION -> . ID LPAREN RPAREN PUNTOCOMA
    (20) IFCALL -> . IF E AUXIF1 DOSPUNTOS B IFAUX AUXF3 END PUNTOCOMA
    (26) WHILECALL -> . WHILE WHILEAUX E WHILEAUX1 DOSPUNTOS B WHILEAUX2 END PUNTOCOMA
    (30) DOWHILECALL -> . DO DOSPUNTOS DOAUX B LOOP E DOAUX1 END PUNTOCOMA
    (33) FORCALL -> . FOR IDAUX IGUAL YONE IFOR PUNTOCOMA FDIR E FSAL PUNTOCOMA INCREMENTO DOSPUNTOS B FAUX END PUNTOCOMA
    (40) WRITECALL -> . WRITE LPAREN AUXESCRIBE RPAREN PUNTOCOMA
    (43) READCALL -> . ID IGUAL READ LPAREN RPAREN PUNTOCOMA
    (50) ASIGANCION -> . ID IGUAL E PUNTOCOMA
    (51) ASIGPLUS -> . ID PLUSPLUS PUNTOCOMA
    (52) ASIGMIN -> . ID MINMIN PUNTOCOMA
    (49) ASIGVE -> . DIMENSION IGUAL E PUNTOCOMA
    (74) DIMENSION -> . ID LCOR LOCAL RCOR LCOR LOCAL RCOR
    (75) DIMENSION -> . ID LCOR LOCAL RCOR

    ID              shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    DO              shift and go to state 53
    FOR             shift and go to state 54
    WRITE           shift and go to state 55

    B                              shift and go to state 36
    SPE                            shift and go to state 37
    ASSIGNMENT                     shift and go to state 38
    CALLFUNCTION                   shift and go to state 39
    IFCALL                         shift and go to state 40
    WHILECALL                      shift and go to state 41
    DOWHILECALL                    shift and go to state 42
    FORCALL                        shift and go to state 43
    WRITECALL                      shift and go to state 44
    READCALL                       shift and go to state 45
    ASIGANCION                     shift and go to state 46
    ASIGPLUS                       shift and go to state 47
    ASIGMIN                        shift and go to state 48
    ASIGVE                         shift and go to state 49
    DIMENSION                      shift and go to state 56

state 34

    (9) VECTOR -> LCOR CONSTANTE RCOR LCOR . CONSTANTE RCOR

    CONSTANTE       shift and go to state 57


state 35

    (78) PRINCIPAL -> MAIN LPAREN RPAREN DOSPUNTOS MAINAUX . B ENDF FINMAIN
    (81) B -> . SPE B
    (82) B -> . SPE
    (12) SPE -> . ASSIGNMENT
    (13) SPE -> . CALLFUNCTION
    (14) SPE -> . IFCALL
    (15) SPE -> . WHILECALL
    (16) SPE -> . DOWHILECALL
    (17) SPE -> . FORCALL
    (18) SPE -> . WRITECALL
    (19) SPE -> . READCALL
    (45) ASSIGNMENT -> . ASIGANCION
    (46) ASSIGNMENT -> . ASIGPLUS
    (47) ASSIGNMENT -> . ASIGMIN
    (48) ASSIGNMENT -> . ASIGVE
    (44) CALLFUNCTION -> . ID LPAREN RPAREN PUNTOCOMA
    (20) IFCALL -> . IF E AUXIF1 DOSPUNTOS B IFAUX AUXF3 END PUNTOCOMA
    (26) WHILECALL -> . WHILE WHILEAUX E WHILEAUX1 DOSPUNTOS B WHILEAUX2 END PUNTOCOMA
    (30) DOWHILECALL -> . DO DOSPUNTOS DOAUX B LOOP E DOAUX1 END PUNTOCOMA
    (33) FORCALL -> . FOR IDAUX IGUAL YONE IFOR PUNTOCOMA FDIR E FSAL PUNTOCOMA INCREMENTO DOSPUNTOS B FAUX END PUNTOCOMA
    (40) WRITECALL -> . WRITE LPAREN AUXESCRIBE RPAREN PUNTOCOMA
    (43) READCALL -> . ID IGUAL READ LPAREN RPAREN PUNTOCOMA
    (50) ASIGANCION -> . ID IGUAL E PUNTOCOMA
    (51) ASIGPLUS -> . ID PLUSPLUS PUNTOCOMA
    (52) ASIGMIN -> . ID MINMIN PUNTOCOMA
    (49) ASIGVE -> . DIMENSION IGUAL E PUNTOCOMA
    (74) DIMENSION -> . ID LCOR LOCAL RCOR LCOR LOCAL RCOR
    (75) DIMENSION -> . ID LCOR LOCAL RCOR

    ID              shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    DO              shift and go to state 53
    FOR             shift and go to state 54
    WRITE           shift and go to state 55

    B                              shift and go to state 58
    SPE                            shift and go to state 37
    ASSIGNMENT                     shift and go to state 38
    CALLFUNCTION                   shift and go to state 39
    IFCALL                         shift and go to state 40
    WHILECALL                      shift and go to state 41
    DOWHILECALL                    shift and go to state 42
    FORCALL                        shift and go to state 43
    WRITECALL                      shift and go to state 44
    READCALL                       shift and go to state 45
    ASIGANCION                     shift and go to state 46
    ASIGPLUS                       shift and go to state 47
    ASIGMIN                        shift and go to state 48
    ASIGVE                         shift and go to state 49
    DIMENSION                      shift and go to state 56

state 36

    (85) MEA -> VOID MEAIN LPAREN RPAREN DOSPUNTOS B . ENDF PUNTOCOMA FINMEA MEA
    (86) MEA -> VOID MEAIN LPAREN RPAREN DOSPUNTOS B . ENDF PUNTOCOMA FINMEA

    ENDF            shift and go to state 59


state 37

    (81) B -> SPE . B
    (82) B -> SPE .
    (81) B -> . SPE B
    (82) B -> . SPE
    (12) SPE -> . ASSIGNMENT
    (13) SPE -> . CALLFUNCTION
    (14) SPE -> . IFCALL
    (15) SPE -> . WHILECALL
    (16) SPE -> . DOWHILECALL
    (17) SPE -> . FORCALL
    (18) SPE -> . WRITECALL
    (19) SPE -> . READCALL
    (45) ASSIGNMENT -> . ASIGANCION
    (46) ASSIGNMENT -> . ASIGPLUS
    (47) ASSIGNMENT -> . ASIGMIN
    (48) ASSIGNMENT -> . ASIGVE
    (44) CALLFUNCTION -> . ID LPAREN RPAREN PUNTOCOMA
    (20) IFCALL -> . IF E AUXIF1 DOSPUNTOS B IFAUX AUXF3 END PUNTOCOMA
    (26) WHILECALL -> . WHILE WHILEAUX E WHILEAUX1 DOSPUNTOS B WHILEAUX2 END PUNTOCOMA
    (30) DOWHILECALL -> . DO DOSPUNTOS DOAUX B LOOP E DOAUX1 END PUNTOCOMA
    (33) FORCALL -> . FOR IDAUX IGUAL YONE IFOR PUNTOCOMA FDIR E FSAL PUNTOCOMA INCREMENTO DOSPUNTOS B FAUX END PUNTOCOMA
    (40) WRITECALL -> . WRITE LPAREN AUXESCRIBE RPAREN PUNTOCOMA
    (43) READCALL -> . ID IGUAL READ LPAREN RPAREN PUNTOCOMA
    (50) ASIGANCION -> . ID IGUAL E PUNTOCOMA
    (51) ASIGPLUS -> . ID PLUSPLUS PUNTOCOMA
    (52) ASIGMIN -> . ID MINMIN PUNTOCOMA
    (49) ASIGVE -> . DIMENSION IGUAL E PUNTOCOMA
    (74) DIMENSION -> . ID LCOR LOCAL RCOR LCOR LOCAL RCOR
    (75) DIMENSION -> . ID LCOR LOCAL RCOR

    ENDF            reduce using rule 82 (B -> SPE .)
    LOOP            reduce using rule 82 (B -> SPE .)
    ELSE            reduce using rule 82 (B -> SPE .)
    END             reduce using rule 82 (B -> SPE .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    DO              shift and go to state 53
    FOR             shift and go to state 54
    WRITE           shift and go to state 55

    SPE                            shift and go to state 37
    B                              shift and go to state 60
    ASSIGNMENT                     shift and go to state 38
    CALLFUNCTION                   shift and go to state 39
    IFCALL                         shift and go to state 40
    WHILECALL                      shift and go to state 41
    DOWHILECALL                    shift and go to state 42
    FORCALL                        shift and go to state 43
    WRITECALL                      shift and go to state 44
    READCALL                       shift and go to state 45
    ASIGANCION                     shift and go to state 46
    ASIGPLUS                       shift and go to state 47
    ASIGMIN                        shift and go to state 48
    ASIGVE                         shift and go to state 49
    DIMENSION                      shift and go to state 56

state 38

    (12) SPE -> ASSIGNMENT .

    ID              reduce using rule 12 (SPE -> ASSIGNMENT .)
    IF              reduce using rule 12 (SPE -> ASSIGNMENT .)
    WHILE           reduce using rule 12 (SPE -> ASSIGNMENT .)
    DO              reduce using rule 12 (SPE -> ASSIGNMENT .)
    FOR             reduce using rule 12 (SPE -> ASSIGNMENT .)
    WRITE           reduce using rule 12 (SPE -> ASSIGNMENT .)
    ENDF            reduce using rule 12 (SPE -> ASSIGNMENT .)
    LOOP            reduce using rule 12 (SPE -> ASSIGNMENT .)
    ELSE            reduce using rule 12 (SPE -> ASSIGNMENT .)
    END             reduce using rule 12 (SPE -> ASSIGNMENT .)


state 39

    (13) SPE -> CALLFUNCTION .

    ID              reduce using rule 13 (SPE -> CALLFUNCTION .)
    IF              reduce using rule 13 (SPE -> CALLFUNCTION .)
    WHILE           reduce using rule 13 (SPE -> CALLFUNCTION .)
    DO              reduce using rule 13 (SPE -> CALLFUNCTION .)
    FOR             reduce using rule 13 (SPE -> CALLFUNCTION .)
    WRITE           reduce using rule 13 (SPE -> CALLFUNCTION .)
    ENDF            reduce using rule 13 (SPE -> CALLFUNCTION .)
    LOOP            reduce using rule 13 (SPE -> CALLFUNCTION .)
    ELSE            reduce using rule 13 (SPE -> CALLFUNCTION .)
    END             reduce using rule 13 (SPE -> CALLFUNCTION .)


state 40

    (14) SPE -> IFCALL .

    ID              reduce using rule 14 (SPE -> IFCALL .)
    IF              reduce using rule 14 (SPE -> IFCALL .)
    WHILE           reduce using rule 14 (SPE -> IFCALL .)
    DO              reduce using rule 14 (SPE -> IFCALL .)
    FOR             reduce using rule 14 (SPE -> IFCALL .)
    WRITE           reduce using rule 14 (SPE -> IFCALL .)
    ENDF            reduce using rule 14 (SPE -> IFCALL .)
    LOOP            reduce using rule 14 (SPE -> IFCALL .)
    ELSE            reduce using rule 14 (SPE -> IFCALL .)
    END             reduce using rule 14 (SPE -> IFCALL .)


state 41

    (15) SPE -> WHILECALL .

    ID              reduce using rule 15 (SPE -> WHILECALL .)
    IF              reduce using rule 15 (SPE -> WHILECALL .)
    WHILE           reduce using rule 15 (SPE -> WHILECALL .)
    DO              reduce using rule 15 (SPE -> WHILECALL .)
    FOR             reduce using rule 15 (SPE -> WHILECALL .)
    WRITE           reduce using rule 15 (SPE -> WHILECALL .)
    ENDF            reduce using rule 15 (SPE -> WHILECALL .)
    LOOP            reduce using rule 15 (SPE -> WHILECALL .)
    ELSE            reduce using rule 15 (SPE -> WHILECALL .)
    END             reduce using rule 15 (SPE -> WHILECALL .)


state 42

    (16) SPE -> DOWHILECALL .

    ID              reduce using rule 16 (SPE -> DOWHILECALL .)
    IF              reduce using rule 16 (SPE -> DOWHILECALL .)
    WHILE           reduce using rule 16 (SPE -> DOWHILECALL .)
    DO              reduce using rule 16 (SPE -> DOWHILECALL .)
    FOR             reduce using rule 16 (SPE -> DOWHILECALL .)
    WRITE           reduce using rule 16 (SPE -> DOWHILECALL .)
    ENDF            reduce using rule 16 (SPE -> DOWHILECALL .)
    LOOP            reduce using rule 16 (SPE -> DOWHILECALL .)
    ELSE            reduce using rule 16 (SPE -> DOWHILECALL .)
    END             reduce using rule 16 (SPE -> DOWHILECALL .)


state 43

    (17) SPE -> FORCALL .

    ID              reduce using rule 17 (SPE -> FORCALL .)
    IF              reduce using rule 17 (SPE -> FORCALL .)
    WHILE           reduce using rule 17 (SPE -> FORCALL .)
    DO              reduce using rule 17 (SPE -> FORCALL .)
    FOR             reduce using rule 17 (SPE -> FORCALL .)
    WRITE           reduce using rule 17 (SPE -> FORCALL .)
    ENDF            reduce using rule 17 (SPE -> FORCALL .)
    LOOP            reduce using rule 17 (SPE -> FORCALL .)
    ELSE            reduce using rule 17 (SPE -> FORCALL .)
    END             reduce using rule 17 (SPE -> FORCALL .)


state 44

    (18) SPE -> WRITECALL .

    ID              reduce using rule 18 (SPE -> WRITECALL .)
    IF              reduce using rule 18 (SPE -> WRITECALL .)
    WHILE           reduce using rule 18 (SPE -> WRITECALL .)
    DO              reduce using rule 18 (SPE -> WRITECALL .)
    FOR             reduce using rule 18 (SPE -> WRITECALL .)
    WRITE           reduce using rule 18 (SPE -> WRITECALL .)
    ENDF            reduce using rule 18 (SPE -> WRITECALL .)
    LOOP            reduce using rule 18 (SPE -> WRITECALL .)
    ELSE            reduce using rule 18 (SPE -> WRITECALL .)
    END             reduce using rule 18 (SPE -> WRITECALL .)


state 45

    (19) SPE -> READCALL .

    ID              reduce using rule 19 (SPE -> READCALL .)
    IF              reduce using rule 19 (SPE -> READCALL .)
    WHILE           reduce using rule 19 (SPE -> READCALL .)
    DO              reduce using rule 19 (SPE -> READCALL .)
    FOR             reduce using rule 19 (SPE -> READCALL .)
    WRITE           reduce using rule 19 (SPE -> READCALL .)
    ENDF            reduce using rule 19 (SPE -> READCALL .)
    LOOP            reduce using rule 19 (SPE -> READCALL .)
    ELSE            reduce using rule 19 (SPE -> READCALL .)
    END             reduce using rule 19 (SPE -> READCALL .)


state 46

    (45) ASSIGNMENT -> ASIGANCION .
